Support Java 22.