@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm</artifactId>
-            <version>9.3</version>
+            <version>9.7</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-util</artifactId>
-            <version>9.3</version>
+            <version>9.7</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -88,19 +88,10 @@
                 <version>3.8.0</version>
                 <inherited>true</inherited>
                 <configuration>
-                    <source>20</source>
-                    <target>20</target>
+                    <release>22</release>
                     <encoding>utf-8</encoding>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.classfile=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.classfile.attribute=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.classfile.constantpool=ALL-UNNAMED</arg>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/jdk.classfile.instruction=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -112,10 +103,6 @@
                 <configuration>
                     <argLine>
                         --enable-preview
-                        --add-exports java.base/jdk.classfile=ALL-UNNAMED
-                        --add-exports java.base/jdk.classfile.attribute=ALL-UNNAMED
-                        --add-exports java.base/jdk.classfile.constantpool=ALL-UNNAMED
-                        --add-exports java.base/jdk.classfile.instruction=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
